styles/imdbID.scss
.imdbIDContainer {
    margin-top: -5.3rem;
    margin-left: -2.8rem;
    position: relative;
    z-index: 0;
    padding: 2rem;
    color: white;

    .background {
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        background-size: cover;
        background-position: center;
        filter: blur(15px) brightness(0.5);
        mask-image: linear-gradient(to right, black 50%, transparent);
        z-index: -1;
    }

    .layout {
        display: flex;
        grid-template-columns: 300px auto;
        gap: 2rem;

        .poster {
            border-radius: 0.5rem;
            box-shadow: 0px 0px 10px #0000006e;
        }

        .pageTitle {
            margin-bottom: 1rem;
        }

        .subline {
            display: flex;
            align-items: center;
            justify-content: space-between;
            margin: 0.25rem 0;
            gap: 1rem;

            h1, h3 {
                margin: 0;
            }

            .runtime {
                display: flex;
                gap: 0.5rem;
                border: 0.2rem solid white;
                border-radius: 5rem;
                padding: 0.5rem 0.75rem;
                align-items: center;

                svg {
                    width: 1.5rem;
                }

                h3 {
                    white-space: nowrap;
                }
            }

            .rating {
                padding: 0.25rem 0.75rem;
                background: white;
                color: $fg-color-dark;
                border-radius: 0.25rem;
                display: flex;
                font-weight: bold;
                font-size: 1.5rem;
            }
    
            .genre {
                font-weight: light;
            }
        }

        .plot {
            font-size: 1.75rem;
        }
    }

    .torrents {
        background: $bg-color;
        width: calc(100vw - 5.8rem);
        margin: 2rem 0 -5rem -2rem;
        padding: 0 2rem 5rem 2rem;
        display: flex;
        flex-direction: column;
        box-sizing: border-box;
        gap: 1rem;

        .torrent {
            background-color: $fg-color-dark;
            padding: 0.2rem 1.5rem;
            border-radius: 0.75rem;
            display: flex;
            justify-content: space-between;
            align-items: center;
            color: white;
            font-family: halyard-display, sans-serif;
            font-size: 1rem;
            text-align: left;

            p {
                word-wrap: break-word;
            }

            .peers {
                display: flex;
                gap: 0.5rem;
                
                span {
                    padding: 0.25rem 0.75rem;
                    border-radius: 0.25rem;
                }

                .seeders {
                    background-color: #498249;
                }
                .leechers {
                    background-color: #b05555;
                }
            }
        }
    }

    .seasons {
        max-height: 75vh;
        overflow: auto;
        display: flex;
        flex-direction: row;
        gap: 2rem;
        padding-top: 3rem;

        .seasonList {
            flex-shrink: 0;
            position: sticky;
            top: 0rem;
            display: flex;
            flex-direction: column;

            h1 {
                margin: 0;
                font-weight: 500;
                opacity: 0.5;
                transition: opacity 0.2s 0.2s ease;

                &.viewing {
                    opacity: 1;
                }
            }
        }

        .episodeList {
            width: available;
            width: -moz-available;
            width: -webkit-fill-available;
            
            .season {
                display: flex;
                flex-direction: column;
                gap: 1rem;
                margin-bottom: 1rem;

                .seasonLabel {
                    margin: 0;
                }

                .seasonDivider {
                    width: 90%;
                    background-color: $menu-color;
                    height: 0.5rem;
                    margin: 1rem auto;
                    border-radius: 50rem;
                }

                hr {
                    width: 100%;
                }
        
                .episode {
                    padding: 1rem;
                    display: block;
                }
            }
        }
    }

    @media (max-width: 1000px) {
        width: 100vw;
        margin: -3rem 0 0 -1rem;
        padding: 1rem;
        box-sizing: border-box;

        .background {
            filter: blur(3px) brightness(0.25);
        }

        .layout {
            display: flex;
            grid-template-columns: 300px auto;
            gap: 2rem;
            
            .col1 {
                display: none;
            }

            .yearAndGenre {
                flex-direction: column;
                align-items: start;
                gap: 0rem;
                margin-bottom: 1rem;

                h1 {
                    font-size: 1.75rem;
                }
            }

            .plot {
                font-size: 1.5rem;
            }

            .actors {
                display: none;
            }
        }    

        .torrents {
            width: 100vw;
            margin-left: -1rem;
            padding: 0 1rem 5rem 1rem;

            .torrent {
                p {
                    max-width: 50%;
                }
            }
        }

        .seasons {
            padding-top: 2rem;
        }
    }

}

